--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,12 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <app-odd></app-odd>
+      <app-even></app-even>
+      <app-game-control></app-game-control>
+    </div>
+  </div>
+</div>
