Add buttons to GameControl template
'start' button, 'stop' button

--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,1 +1,2 @@
-<h1>GameControl works!</h1>
+<button class="btn btn-success btn-lg">START</button>
+<button class="btn btn-danger btn-lg">STOP</button>
