Add functionality to 'start' button
Callback function starts a timer in GameControl component,
where a counter is incremented and its updated value is emitted each second.
AppComponent receives this Output and displays it as a gameTimer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,8 @@
     <div class="col-xs-12">
       <app-odd></app-odd>
       <app-even></app-even>
-      <app-game-control></app-game-control>
+      <app-game-control (gameStarted)="showTime($event)"></app-game-control>
+      <h3 style="color: green;">{{ gameTimer }}</h3>
     </div>
   </div>
 </div>
