--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,2 +1,3 @@
-<button class="btn btn-success btn-lg">START</button>
+<button class="btn btn-success btn-lg" (click)="startGame()">START</button>
 <button class="btn btn-danger btn-lg">STOP</button>
+<!-- <h1>{{ counter }}</h1> -->
