--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
     <div class="col-xs-12">
       <h3>Bind it!</h3>
       <ol>
-        <li>Create three new components: GameControl, Odd and Even</li>
-        <li>The GameControl Component should have buttons to start and stop the game</li>
-        <li>When starting the game, an event (holding a incrementing number) should get emitted each second (ref = setInterval())</li>
-        <li>The event should be listenable from outside the component</li>
-        <li>When stopping the game, no more events should get emitted (clearInterval(ref))</li>
+        <li>Create three new components: GameControl, Odd and Even &#10004;	</li>
+        <li>The GameControl Component should have buttons to start and stop the game &#10004;	</li>
+        <li>When starting the game, an event (holding a incrementing number) should get emitted each second (ref = setInterval()) &#10004; </li>
+        <li>The event should be listenable from outside the component &#10004; </li>
+        <li>When stopping the game, no more events should get emitted (clearInterval(ref)) &#10004; </li>
         <li>A new Odd component should get created for every odd number emitted, the same should happen for the Even Component (on even numbers)</li>
         <li>Simply output Odd - NUMBER or Even - NUMBER in the two components</li>
         <li>Style the element (e.g. paragraph) holding your output text differently in both components</li>
@@ -21,7 +21,7 @@
       <app-odd></app-odd>
       <app-even></app-even>
       <app-game-control (gameStarted)="showTime($event)"></app-game-control>
-      <h3 style="color: green;">{{ gameTimer }}</h3>
+      <h3 style="color: green;">{{ gameTimer || 0 }}</h3>
     </div>
   </div>
 </div>
