--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,3 +1,3 @@
 <button class="btn btn-success btn-lg" (click)="startGame()">START</button>
-<button class="btn btn-danger btn-lg">STOP</button>
+<button class="btn btn-danger btn-lg" (click)="stopGame()">STOP</button>
 <!-- <h1>{{ counter }}</h1> -->
