--- a/src/app/even/even.component.css
+++ b/src/app/even/even.component.css
@@ -2,9 +2,12 @@
 
 * {
   font-family: 'Pompiere';
+  font-size: 2rem;
+  font-weight: bold;
   color: #1728e6;
   background-color: lightgoldenrodyellow;
   border: 4px inset red;
+  border-radius: 1rem;
   padding: 1rem;
   width: 15rem;
 }
