--- a/src/app/odd/odd.component.css
+++ b/src/app/odd/odd.component.css
@@ -4,6 +4,7 @@
   font-family: 'Press Start 2P', cursive;
   color: #49eb34;
   border: 4px outset lightgrey;
+  border-radius: 1rem;
   background-color: black;
   padding: 1.5rem;
   width: 15rem;
